Add cancel button to new message form

--- a/views/form.ejs
+++ b/views/form.ejs
@@ -29,12 +29,22 @@
           required
         ></textarea>
       </label>
-      <button
-        class="self-start rounded-lg bg-indigo-600 px-8 py-3 font-semibold text-white shadow transition-colors duration-75 hover:bg-indigo-700 focus:bg-indigo-700 focus:outline-none focus:ring focus:ring-indigo-500/50 active:bg-indigo-800"
-        type="submit"
-      >
-        Submit
-      </button>
+
+      <section>
+        <button
+          class="mr-1 rounded-lg bg-green-600 px-8 py-3 font-semibold text-white shadow transition-colors duration-75 hover:bg-green-700 focus:bg-green-700 focus:outline-none focus:ring focus:ring-green-500/50 active:bg-green-800"
+          type="submit"
+        >
+          Submit
+        </button>
+        <button
+          class="rounded-lg bg-red-600 px-8 py-3 font-semibold text-white shadow transition-colors duration-75 hover:bg-red-700 focus:bg-red-700 focus:outline-none focus:ring focus:ring-red-500/50 active:bg-red-800"
+          type="button"
+          onclick="window.location.href = '/'"
+        >
+          Cancel
+        </button>
+      </section>
     </form>
   </body>
 </html>
