Add 'New message' link to /new

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,5 +20,13 @@
       </p>
       <% }) %>
     </section>
+
+    <a class="group inline-block focus:outline-none" href="/new"
+      ><p
+        class="rounded-lg bg-green-600 px-8 py-3 font-semibold text-white shadow transition-colors duration-75 hover:bg-green-700 active:bg-green-800 group-focus:bg-green-700 group-focus:ring group-focus:ring-green-500/50"
+      >
+        New message
+      </p></a
+    >
   </body>
 </html>
